Fixed a bug causing font to appear bolder on Firefox or mobile

--- a/app/assets/stylesheets/web/article.scss
+++ b/app/assets/stylesheets/web/article.scss
@@ -59,7 +59,7 @@
 .article-show {
   background: white;
   font-size: 1.4em;
-  font-weight: 500;
+  font-weight: normal;
   .article-date {
     font-size: 0.7em;
     margin-top: 5px;
